; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_json.c_composite_to_json.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_json.c_composite_to_json.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }
%struct.TYPE_11__ = type { i32, i32 }
%struct.TYPE_12__ = type { i32, i32, i64 }

@.str = private unnamed_addr constant [4 x i8] c",\0A \00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c",\00", align 1
@JSONTYPE_NULL = common dso_local global i32 0, align 4
@InvalidOid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32)* @composite_to_json to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @composite_to_json(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_10__*, align 8
  %11 = alloca %struct.TYPE_11__, align 4
  %12 = alloca %struct.TYPE_11__*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i8*, align 8
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca %struct.TYPE_12__*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %14, align 4
  %22 = load i32, i32* %6, align 4
  %23 = icmp ne i32 %22, 0
  %24 = zext i1 %23 to i64
  %25 = select i1 %23, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0)
  store i8* %25, i8** %15, align 8
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @DatumGetHeapTupleHeader(i32 %26)
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @HeapTupleHeaderGetTypeId(i32 %28)
  store i32 %29, i32* %8, align 4
  %30 = load i32, i32* %7, align 4
  %31 = call i32 @HeapTupleHeaderGetTypMod(i32 %30)
  store i32 %31, i32* %9, align 4
  %32 = load i32, i32* %8, align 4
  %33 = load i32, i32* %9, align 4
  %34 = call %struct.TYPE_10__* @lookup_rowtype_tupdesc(i32 %32, i32 %33)
  store %struct.TYPE_10__* %34, %struct.TYPE_10__** %10, align 8
  %35 = load i32, i32* %7, align 4
  %36 = call i32 @HeapTupleHeaderGetDatumLength(i32 %35)
  %37 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %11, i32 0, i32 1
  store i32 %36, i32* %37, align 4
  %38 = load i32, i32* %7, align 4
  %39 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %11, i32 0, i32 0
  store i32 %38, i32* %39, align 4
  store %struct.TYPE_11__* %11, %struct.TYPE_11__** %12, align 8
  %40 = load i32, i32* %5, align 4
  %41 = call i32 @appendStringInfoChar(i32 %40, i8 signext 123)
  store i32 0, i32* %13, align 4
  br label %42

42:                                               ; preds = %96, %3
  %43 = load i32, i32* %13, align 4
  %44 = load %struct.TYPE_10__*, %struct.TYPE_10__** %10, align 8
  %45 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  %47 = icmp slt i32 %43, %46
  br i1 %47, label %48, label %99

48:                                               ; preds = %42
  %49 = load %struct.TYPE_10__*, %struct.TYPE_10__** %10, align 8
  %50 = load i32, i32* %13, align 4
  %51 = call %struct.TYPE_12__* @TupleDescAttr(%struct.TYPE_10__* %49, i32 %50)
  store %struct.TYPE_12__* %51, %struct.TYPE_12__** %21, align 8
  %52 = load %struct.TYPE_12__*, %struct.TYPE_12__** %21, align 8
  %53 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %52, i32 0, i32 2
  %54 = load i64, i64* %53, align 8
  %55 = icmp ne i64 %54, 0
  br i1 %55, label %56, label %57

56:                                               ; preds = %48
  br label %96

57:                                               ; preds = %48
  %58 = load i32, i32* %14, align 4
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %60, label %64

60:                                               ; preds = %57
  %61 = load i32, i32* %5, align 4
  %62 = load i8*, i8** %15, align 8
  %63 = call i32 @appendStringInfoString(i32 %61, i8* %62)
  br label %64

64:                                               ; preds = %60, %57
  store i32 1, i32* %14, align 4
  %65 = load %struct.TYPE_12__*, %struct.TYPE_12__** %21, align 8
  %66 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %65, i32 0, i32 1
  %67 = load i32, i32* %66, align 4
  %68 = call i8* @NameStr(i32 %67)
  store i8* %68, i8** %18, align 8
  %69 = load i32, i32* %5, align 4
  %70 = load i8*, i8** %18, align 8
  %71 = call i32 @escape_json(i32 %69, i8* %70)
  %72 = load i32, i32* %5, align 4
  %73 = call i32 @appendStringInfoChar(i32 %72, i8 signext 58)
  %74 = load %struct.TYPE_11__*, %struct.TYPE_11__** %12, align 8
  %75 = load i32, i32* %13, align 4
  %76 = add nsw i32 %75, 1
  %77 = load %struct.TYPE_10__*, %struct.TYPE_10__** %10, align 8
  %78 = call i32 @heap_getattr(%struct.TYPE_11__* %74, i32 %76, %struct.TYPE_10__* %77, i32* %17)
  store i32 %78, i32* %16, align 4
  %79 = load i32, i32* %17, align 4
  %80 = icmp ne i32 %79, 0
  br i1 %80, label %81, label %84

81:                                               ; preds = %64
  %82 = load i32, i32* @JSONTYPE_NULL, align 4
  store i32 %82, i32* %19, align 4
  %83 = load i32, i32* @InvalidOid, align 4
  store i32 %83, i32* %20, align 4
  br label %89

84:                                               ; preds = %64
  %85 = load %struct.TYPE_12__*, %struct.TYPE_12__** %21, align 8
  %86 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %85, i32 0, i32 0
  %87 = load i32, i32* %86, align 8
  %88 = call i32 @json_categorize_type(i32 %87, i32* %19, i32* %20)
  br label %89

89:                                               ; preds = %84, %81
  %90 = load i32, i32* %16, align 4
  %91 = load i32, i32* %17, align 4
  %92 = load i32, i32* %5, align 4
  %93 = load i32, i32* %19, align 4
  %94 = load i32, i32* %20, align 4
  %95 = call i32 @datum_to_json(i32 %90, i32 %91, i32 %92, i32 %93, i32 %94, i32 0)
  br label %96

96:                                               ; preds = %89, %56
  %97 = load i32, i32* %13, align 4
  %98 = add nsw i32 %97, 1
  store i32 %98, i32* %13, align 4
  br label %42

99:                                               ; preds = %42
  %100 = load i32, i32* %5, align 4
  %101 = call i32 @appendStringInfoChar(i32 %100, i8 signext 125)
  %102 = load %struct.TYPE_10__*, %struct.TYPE_10__** %10, align 8
  %103 = call i32 @ReleaseTupleDesc(%struct.TYPE_10__* %102)
  ret void
}

declare dso_local i32 @DatumGetHeapTupleHeader(i32) #1

declare dso_local i32 @HeapTupleHeaderGetTypeId(i32) #1

declare dso_local i32 @HeapTupleHeaderGetTypMod(i32) #1

declare dso_local %struct.TYPE_10__* @lookup_rowtype_tupdesc(i32, i32) #1

declare dso_local i32 @HeapTupleHeaderGetDatumLength(i32) #1

declare dso_local i32 @appendStringInfoChar(i32, i8 signext) #1

declare dso_local %struct.TYPE_12__* @TupleDescAttr(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @appendStringInfoString(i32, i8*) #1

declare dso_local i8* @NameStr(i32) #1

declare dso_local i32 @escape_json(i32, i8*) #1

declare dso_local i32 @heap_getattr(%struct.TYPE_11__*, i32, %struct.TYPE_10__*, i32*) #1

declare dso_local i32 @json_categorize_type(i32, i32*, i32*) #1

declare dso_local i32 @datum_to_json(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ReleaseTupleDesc(%struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
